# IIHR-DevCon2026-WQ-workshop

./: .gitignore  LICENSE  README.md  TODO.md  demo.py  demo1layer.py  demo3layer.py  demo_hydrology_tiles.py  demo_postprocessing_scenarios.ipynb  prepare_hydrology_forcings.py  pyproject.toml
data/: nitrogen_forcing_fallspring.parquet  nitrogen_forcing_spring.parquet  nitrogen_forcings.parquet
notebooks/: Activity_1_model_exploration.ipynb  Activity_2a_remove_adsorption.ipynb  Activity_2b_remove_tile_drainage.ipynb  Activity_3_change_application.ipynb  Compare_activities_1_3.ipynb
notebooks/demo_outputs_activity_1_fallspring_adsorption/hydrology_3layer/Hydrologic_model/: discharge1.parquet  states1.parquet
notebooks/demo_outputs_activity_1_fallspring_adsorption/nitrogen_3layer_scenarios/Hydrologic_model_Nitrogen_model/: nitrogen_forcings.parquet  nitrogen_solution.parquet
notebooks/demo_outputs_activity_1_fallspring_no_adsorption/hydrology_3layer/Hydrologic_model/: fluxes1.parquet
notebooks/demo_outputs_activity_1_fallspring_no_adsorption/nitrogen_3layer_scenarios/Hydrologic_model_Nitrogen_model/: nitrogen_solution.parquet
notebooks/wq-modeling-iihr-main/: .gitignore  README.md
notebooks/wq-modeling-iihr-main/demos/actual_et_processing/: download_actual_et_usgs.ipynb  (+1 more)
src/devcon2026/: __init__.py  analysis.py  cli.py  nitrogen.py  tables.py  types.py  utils.py
src/devcon2026/hydro/: __init__.py  export.py  io.py
src/devcon2026/hydrology/: __init__.py  constants.py  export.py  io.py  metrics.py  model.py  periods.py  physics.py  simulation.py  types.py
src/devcon2026/nitrogen/: __init__.py  model.py  single_cv.py  three_compartment.py  types.py
tests/: test_analysis.py  test_cli.py  test_hydro_export.py  test_hydrology_export.py  test_nitrogen.py  test_workflows.py
(+19 files in other folders)
