[project]
name = "devcon2026"
version = "0.1.0"
description = "Reusable analysis package extracted from research notebooks."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]

[project.scripts]
devcon2026 = "devcon2026.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["demo.py", "src/devcon2026", "tests"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "mypy>=2.1.0",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=9.0.3",
]
